--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongodb-session": "^5.0.0",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
